# processing

./: .clang-format  .gitignore
example/: CMakeLists.txt  Makefile
example/src/: main.cpp  matrix_test.cpp  refactor.cpp  renderbuffer_test.cpp  renderer_test.cpp  rendering_test.cpp  shader_test.cpp  snake.cpp  tron.cpp  viewport_test.cpp
processing/: CMakeLists.txt  Makefile
processing/include/processing/: processing.hpp  processing.inl
processing/src/processing/: batch_renderer.cpp  batch_renderer.hpp  default_renderer.cpp  default_renderer.hpp  depth_provider.cpp  depth_provider.hpp  framebuffer.cpp  framebuffer.hpp  geometry_arena.cpp  geometry_arena.hpp  glfw_graphics_context.cpp  glfw_graphics_context.hpp  glfw_window.cpp  glfw_window.hpp  graphics.cpp  graphics.hpp  graphics_context.cpp  graphics_context.hpp  graphics_stack.cpp  graphics_stack.hpp  image.cpp  image.hpp  main_graphics.hpp  math.cpp  matrix_stack.cpp  matrix_stack.hpp  primitives.hpp  processing.cpp  processing_data.hpp  recursive_renderer.cpp  recursive_renderer.hpp  render_buffer.cpp  render_buffer.hpp  render_style.cpp  render_style.hpp  render_style_stack.cpp  render_style_stack.hpp  render_targets.cpp  render_targets.hpp  renderbuffer.cpp  (+11 more)
